[gd_scene load_steps=30 format=3 uid="uid://cn2gpadmmp748"]

[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_h466v"]
[ext_resource type="Texture2D" uid="uid://chhaiatp6d7xj" path="res://Asset/Spritesheet/spritesheet_GDCJammer.png" id="2_1q7hp"]
[ext_resource type="Script" path="res://Entity/Player/State/StateMachine.gd" id="3_lnf71"]
[ext_resource type="Script" path="res://Entity/Player/movementComponent.gd" id="4_ceuyd"]
[ext_resource type="Script" path="res://Entity/Player/State/Idle.gd" id="4_eiggd"]
[ext_resource type="Script" path="res://Entity/Player/State/Move.gd" id="5_mm2jq"]
[ext_resource type="Script" path="res://Entity/Player/State/Fall.gd" id="6_7bh3u"]
[ext_resource type="Script" path="res://Entity/Player/State/Dash.gd" id="7_jjxa5"]
[ext_resource type="Script" path="res://Entity/Player/State/Jump.gd" id="8_neg4y"]
[ext_resource type="Script" path="res://Entity/Player/State/Attack.gd" id="9_twaom"]
[ext_resource type="Script" path="res://Entity/Player/State/Dead.gd" id="10_f6jng"]
[ext_resource type="Script" path="res://Entity/Player/cameraMovementCompoentn.gd" id="10_wwk2v"]
[ext_resource type="Script" path="res://Entity/Player/State/Hurt.gd" id="11_efa7s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hrcq2"]
atlas = ExtResource("2_1q7hp")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_koq5f"]
atlas = ExtResource("2_1q7hp")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry2kf"]
atlas = ExtResource("2_1q7hp")
region = Rect2(1800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8byf3"]
atlas = ExtResource("2_1q7hp")
region = Rect2(2000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8tly"]
atlas = ExtResource("2_1q7hp")
region = Rect2(2400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdr32"]
atlas = ExtResource("2_1q7hp")
region = Rect2(2200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iokx"]
atlas = ExtResource("2_1q7hp")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uslic"]
atlas = ExtResource("2_1q7hp")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw38t"]
atlas = ExtResource("2_1q7hp")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x56x"]
atlas = ExtResource("2_1q7hp")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3bba"]
atlas = ExtResource("2_1q7hp")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5d1o"]
atlas = ExtResource("2_1q7hp")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ojni"]
atlas = ExtResource("2_1q7hp")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwiw0"]
atlas = ExtResource("2_1q7hp")
region = Rect2(800, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_1w7dn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrcq2")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_koq5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koq5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry2kf")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8byf3")
}],
"loop": true,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8tly")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdr32")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iokx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uslic")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw38t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x56x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw38t")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3bba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5d1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ojni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwiw0")
}],
"loop": true,
"name": &"running",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_30wm4"]
height = 36.0

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 17
script = ExtResource("1_h466v")
camera_speed = 8000.0
maxHealth = 100.0

[node name="Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_1w7dn")
animation = &"attack"
frame_progress = 0.847034

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_30wm4")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_lnf71")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateManager" node_paths=PackedStringArray("move_state", "jump_state", "fall_state", "attack_state", "damage_state")]
script = ExtResource("4_eiggd")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
attack_state = NodePath("../Attack")
damage_state = NodePath("../Hurt")
move_speed = 8000.0

[node name="Move" type="Node" parent="StateManager" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "attack_state", "damage_state")]
script = ExtResource("5_mm2jq")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
attack_state = NodePath("../Attack")
damage_state = NodePath("../Hurt")
animation_name = "RUNNING"
move_speed = 10000.0

[node name="Fall" type="Node" parent="StateManager" node_paths=PackedStringArray("idle_state", "move_state", "jump_state")]
script = ExtResource("6_7bh3u")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
animation_name = "Running"
move_speed = 10000.0

[node name="Dash" type="Node" parent="StateManager"]
script = ExtResource("7_jjxa5")

[node name="Jump" type="Node" parent="StateManager" node_paths=PackedStringArray("fall_state", "idle_state", "move_state")]
script = ExtResource("8_neg4y")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
jumpHeight = 90.0
jumpTimeToPeak = 0.5
jumpTimeToDescent = 0.4
animation_name = "jump"
move_speed = 10000.0

[node name="Attack" type="Node" parent="StateManager" node_paths=PackedStringArray("idle_state", "move_state", "damage_state")]
script = ExtResource("9_twaom")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
damage_state = NodePath("../Hurt")
animation_name = "ATTACK"

[node name="Dead" type="Node" parent="StateManager"]
script = ExtResource("10_f6jng")
animation_name = "dead"

[node name="Hurt" type="Node" parent="StateManager" node_paths=PackedStringArray("died_state")]
script = ExtResource("11_efa7s")
died_state = NodePath("../Dead")
damage = 1.0
animation_name = "hurt"

[node name="moveComponent" type="Node" parent="."]
script = ExtResource("4_ceuyd")

[node name="cameraMovementComponent" type="Node" parent="."]
script = ExtResource("10_wwk2v")

[node name="ROOTUI" type="CanvasLayer" parent="."]

[node name="Attack" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2(0.5, 0.5)
collision_mask = 8
